# pdf_extractor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRIVACY_POLICY.md  README.md  README_jp.md  install.sh  mcp_server.py  mcp_server_simple.py  pdf_extractor.py  plan.jp.md  pyproject.toml  setup_and_test_rag.py  setup_env.sh  start_http_server.sh  summary.md  test_japanese_query.py  test_rag_basic.py
.claude/: settings.local.json
config/: http_server_config.yaml  logging_config.yaml  mcp_config.yaml  rag_config.yaml
data/vector_db/: chroma.sqlite3
docs/: HTTP_SERVER_README.md  HTTP_SERVER_README_jp.md
docs/guides/: RAG_README.md  TESTING_GUIDE.md
docs/setup/: ANTHROPIC_SETUP.md  OLLAMA_SETUP.md  OPENAI_SETUP.md
docs/technical/: MODEL_COMPARISON.md  PLAN.md
rag_engine/: __init__.py  chunking.py  embeddings.py  llm_integration.py  retrieval.py  vector_store.py
scripts/: generate_password_hash.py  simple_http_test.py  test_http_minimal.py  test_http_server.py  test_http_success.py  test_log_rotation.py  test_log_security.py  test_mcp_http.py
src/mcp/: __init__.py  auth.py  http_client.py  http_server.py  logging_config.py  mcp_http_adapter.py  server.py  simple_server.py
src/pdf_extractor/: __init__.py  __main__.py  cli.py  converter.py
src/rag_engine/: chunking.py  embeddings.py  llm_integration.py
test/resources/: .gitkeep  README.md
test_vector_db/: chroma.sqlite3
tests/: __init__.py  test_mcp_tools.py  test_pdf_extractor.py  test_rag_engine.py
