[project]
name = "pdf-extractor"
version = "0.1.0"
description = "Convert PDF files to Markdown format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.5",
]

[project.scripts]
pdf-extractor = "pdf_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]